# Sovereign-OS

./: .gitignore  README.md  check_hash.py  deference.py  fix_indentation.diff  kernel.py  main.py  manifold_scan.py  pyproject.toml  setup.py  tgi_research_paper.html  verify_research_paper.js
.github/workflows/: python-package.yml
.jules/: bolt.md
.stratos_assets/: chain_cache.npy  k_mat_0.npy  v_mat_0.npy
core/: manifold.py  runtime.py
docs/infrastructure/: setup.md
kernel/: cache.py  constants.py  geometry.py  torus.py
scripts/: populate_manifold.py  verify_atomic_units.py  verify_knuth_research.py
shell/: deference.py  loader.py  saturator.py
src/stratos_os/: __init__.py
src/stratos_os/core/: coordinator.py  manifold.py  runtime.py  scan.py
src/stratos_os/research/: knuth_cycles.py
src/stratos_os/shell/: deference.py  saturator.py
tests/: test_coordinator.py  test_ghrr.py  test_hierarchical_routing.py  test_infra.py  test_manifold.py  test_populated_manifold.py  test_runtime.py  test_shell.py
